<resources>
    <string name="app_name">Progress Tracker</string>
    <string name="home">Home</string>
    <string name="stats">Statistics</string>
    <string name="highest_rank">Highest Rank</string>
    <string name="success">Success %</string>
    <string name="highest_collection">Highest Collection</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="average_weight_loss">Average Weight Loss</string>
    <string name="add_member">Add Member</string>
    <string name="enter_member_s_name_here">Enter member\'s name</string>
    <string name="enter_member_s_employee_id">Enter member\'s employee id</string>
    <string name="enter_weight_loss_here">Enter weight loss here</string>
    <string name="enter_weight_loss">Enter weight loss </string>
    <string name="enter_average_weight_loss">Enter Average Weight Loss</string>
    <string name="enter_collection">Enter Collection </string>
    <string name="enter_success">Enter Success %</string>
    <string name="rank">Enter rank</string>
    <string name="submit">Submit</string>
    <string name="discard">Discard</string>
    <string name="no_value">--</string>
    <string name="enter_penalty">Enter Penalty</string>
    <string name="enter_activity">Enter Activity</string>
    <string name="penalty">Penalty</string>
    <string name="activity">Activity</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="date">Date</string>

    <string-array name="months">
        <item>Select month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>

    </string-array>

</resources>
