<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name Here"
        android:textColor="@color/blue_dark"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        />

    <Spinner
        android:textAlignment="center"
        android:entries="@array/months"
        android:id="@+id/spMonths"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/etWeightLoss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_weight_loss"
        />

    <EditText
        android:id="@+id/etAvgWeightLoss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_average_weight_loss"
        />

    <EditText
        android:id="@+id/etCollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_collection"
        />

    <EditText
        android:id="@+id/etSuccessPercentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_success"
        />

    <EditText
        android:id="@+id/etRank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="number"
        android:hint="@string/rank"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="16dp"
        >


        <Button
            android:background="@drawable/round_discard"
            android:layout_marginEnd="8dp"
            android:id="@+id/btnDiscard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:text="@string/discard"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            />
        <Button
            android:layout_marginStart="8dp"
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_submit"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            />

    </LinearLayout>





</LinearLayout>