<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:padding="12dp"
            >

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"/>

            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/member_name"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_action_person"
                    android:hint="@string/enter_member_s_name_here" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/member_eid"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_action_eid"
                    android:hint="@string/enter_member_s_employee_id" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/add_member"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_corners"
        android:text="@string/add_member"
        android:textColor="#FFFFFF"
        android:padding="8dp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        />

</LinearLayout>