<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:visibility="visible"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.v7.widget.CardView
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="6dp"
                    app:elevation="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="12dp"
                        >


                        <TextView
                            android:id="@+id/tv_highest_rank"
                            android:text="@string/highest_rank"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="66sp"
                            android:layout_centerInParent="true"
                            android:textColor="#020202"
                            android:text="1"
                            android:textStyle="italic"
                            android:fontFamily="serif-medium"
                            />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:text="Usman Khan"
                            android:textAlignment="center"
                            android:textColor="@color/blue_dark"
                            android:fontFamily="sans-serif-condensed"
                            />


                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="6dp"
                    app:elevation="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="12dp"
                        >


                        <TextView
                            android:text="@string/success"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="48sp"
                            android:layout_centerInParent="true"
                            android:textColor="#020202"
                            android:text="84%"
                            android:textStyle="bold"
                            android:fontFamily="cursive"
                            />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:text="Robin Singh"
                            android:textAlignment="center"
                            android:textColor="@color/blue_dark"
                            android:fontFamily="sans-serif-condensed"
                            />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_marginTop="6dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="175dp">

                    <TextView
                        android:text="@string/highest_collection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="#020202"
                        android:text="10,000"
                        android:textSize="42sp"
                        android:fontFamily="@font/allerta"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/blue_dark"
                        android:text="Abhimanyu Mithun"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-condensed"
                        />



                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.v7.widget.CardView
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="12dp"
                    app:elevation="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="12dp"
                        >


                        <TextView
                            android:text="@string/weight_loss"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="6dp"
                            android:fontFamily="cursive"
                            android:text="8 kg"
                            android:textStyle="bold"
                            android:textColor="#020202"
                            android:textSize="48sp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:text="Shainaz Khan"
                            android:textAlignment="center"
                            android:textColor="@color/blue_dark"
                            android:fontFamily="sans-serif-condensed"
                            />


                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="12dp"
                    app:elevation="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="12dp"
                        >


                        <TextView
                            android:text="@string/average_weight_loss"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="48sp"
                            android:layout_centerInParent="true"
                            android:textColor="#020202"
                            android:text="2"
                            android:textStyle="bold"
                            android:fontFamily="cursive"
                            />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:text="Robin Singh"
                            android:textAlignment="center"
                            android:textColor="@color/blue_dark"
                            android:fontFamily="sans-serif-condensed"
                            />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>